--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:5500",
+  "proxy": "https://cms-uov8.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
