--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "axios": "^1.3.6",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.6.2",
     "redux": "^4.2.1",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "toast": "^0.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
